Fixed the problem with modularity of json b changing library